CRASH in WebCore::MediaSource::seekToTime + 185 https://bugs.webkit.org/show_bug.cgi?id=163652

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/media-source/media-source-seek-detach-crash.html

Add isClosed() checks (which are effectively m_private null-checks) everywhere m_private is
dereferenced. The one place where m_private is cleared without setting the state to closed
is stop(), so make stop() set the state to closed as well (without firing any events).

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::seekToTime):
(WebCore::MediaSource::completeSeek):
(WebCore::MediaSource::monitorSourceBuffers):
(WebCore::MediaSource::streamEndedWithError):
(WebCore::MediaSource::stop):

LayoutTests:

* media/media-source/content/test-48kHz.m4a: Added.
* media/media-source/content/test-48khz-manifest.json: Added.
* media/media-source/media-source-seek-detach-crash-expected.txt: Added.
* media/media-source/media-source-seek-detach-crash.html: Added.


Canonical link: https://commits.webkit.org/181508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207621 268f45cc-cd09-0410-ab3c-d52691b4dbfc